[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Peer-to-peer networking library. Automatically reconnect and manage connections."
documentation = "https://docs.rs/crust"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "crust"
readme = "README.md"
repository = "https://github.com/maidsafe/crust"
version = "0.28.1"

[dependencies]
config_file_handler = "~0.8.0"
env_logger = "~0.4.3"
future-utils = "~0.11.0"
futures = "~0.1.17"
get_if_addrs = "~0.4.0"
log = "~0.3.8"
lru_time_cache = "~0.8.0"
maidsafe_utilities = "~0.16.0"
maplit = "~1.0.1"
net-literals = "~0.1"
net2 = "~0.2.31"
notify = "~4.0.1"
quick-error = "~1.2.0"
rand = "~0.3.17"
safe_crypto = "~0.4.0"
serde = "~1.0.10"
serde_derive = "~1.0.10"
serde_json = "~1.0.2"
tiny-keccak = "~1.4"
tokio-core = "~0.1.10"
tokio-io = "=0.1.8"
unwrap = "~1.2.0"
url = "~1.5.1"
void = "~1.0.2"

[dependencies.bytes]
features = ["serde"]
version = "~0.4"

[dependencies.p2p]
git = "https://github.com/ustulation/p2p"
rev = "bc4ebc4"

[dependencies.tokio-utp]
git = "https://github.com/maidsafe/tokio_utp"
rev = "b4377ab"

[dev-dependencies]
chrono = "~0.4.0"
clap = "~2.31.1"
hamcrest = "~0.1.5"

[features]
default = ["netsim"]
[target."cfg(target_os = \"linux\")".dependencies.netsim]
optional = true
version = "~0.2.2"
