[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Peer-to-peer networking library. Automatically reconnect and manage connections."
documentation = "https://docs.rs/crust"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "crust"
readme = "README.md"
repository = "https://github.com/maidsafe/crust"
version = "0.31.0"

[[example]]
bench = false
name = "crust_peer"
path = "examples/crust_peer.rs"

[dependencies]
byteorder = "~1.1.0"
config_file_handler = "~0.11.0"
crossbeam = "~0.2.10"
get_if_addrs = "~0.4.1"
igd = "~0.6.0"
log = "~0.3.6"
maidsafe_utilities = "~0.16.0"
mio = "~0.6.9"
mio-extras = "~2.0.5"
net2 = "~0.2.30"
quick-error = "~1.2.2"
rand = "~0.3.15"
rust_sodium = "~0.10.0"
serde = "~1.0.25"
serde_derive = "~1.0.25"
serde_json = "~1.0.8"
tiny-keccak = "~1.4.0"
unwrap = "~1.2.0"

[dev-dependencies]
clap = "~2.25.1"
