[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Peer-to-peer networking library. Automatically reconnect and manage connections."
documentation = "https://docs.rs/crust"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "crust"
readme = "README.md"
repository = "https://github.com/maidsafe/crust"
version = "0.32.0"
edition = "2018"

[dependencies]
config_file_handler = "~0.11.0"
crossbeam = "~0.2.10"
get_if_addrs = "~0.5.3"
igd = "~0.7.0"
log = "~0.4.6"
lru_time_cache = { git = "https://github.com/maidsafe/lru_time_cache", rev = "accc955" }
maidsafe_utilities = "~0.17.0"
mio = "~0.6.9"
mio-extras = "~2.0.5"
net2 = "~0.2.33"
quick-error = "~1.2.2"
rand = "~0.6.1"
safe_crypto = "~0.5.0"
serde = "~1.0.82"
serde_derive = "~1.0.82"
serde_json = "~1.0.33"
# TODO(povilas): use new version, when released
socket-collection = { git = "https://github.com/maidsafe/socket-collection", rev = "e1ba943" }
unwrap = "~1.2.1"

[dev-dependencies]
clap = "~2.32.0"
hamcrest2 = "~0.2.3"

[[example]]
bench = false
name = "secure_p2p_connection"
path = "examples/secure_p2p_connection.rs"
